--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "onsec-mcp": "./build/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && chmod 755 build/index.js"
   },
   "files": [
@@ -67,6 +66,7 @@
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
     "once": "^1.4.0",
+    "paginate-info": "^1.0.4",
     "parseurl": "^1.3.3",
     "path-key": "^3.1.1",
     "path-to-regexp": "^8.2.0",
