added streamable http

--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "typescript": "^5.8.3"
   }
