--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "onsec-mcp": "./build/index.js"
   },
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc"
   },
   "files": [
     "build"
@@ -23,6 +23,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.15.3",
+    "shx": "^0.4.0",
     "typescript": "^5.8.3"
   }
 }
