Add prepare script to package.json to ensure build runs before installation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "onsec-mcp": "./build/index.js"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "files": [
     "build"
